--- a/decoder/Cargo.toml
+++ b/decoder/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [lib]
+crate-type = ["staticlib"]
 
 [features]
 fallback = [] # Stub all functions with legacy impl, for testing only
