Stub the rest of functions from ixheaacd_vec_baisc_ops.h

--- a/decoder/Cargo.toml
+++ b/decoder/Cargo.toml
@@ -8,6 +8,7 @@ crate-type = ["staticlib", "rlib"]
 
 [features]
 fallback = [] # Stub all functions with legacy impl, for testing only
+intergation = []
 
 [dependencies]
 
