--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
         "stopAtEntry": false,
         "cwd": "${workspaceFolder}/test",
         "environment": [],
-        "console": "internalConsole"
+        "console": "externalTerminal"
     }
     ]
 }
