minor corrections before merging

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
         "program": "${workspaceFolder}/build/xaacdec.exe",
         "args": ["-ifile:test2_aot42.aac", "-imeta:test2_aot42.txt", "-ofile:output_test2.pcm", "-mp4:1"],
         "stopAtEntry": false,
-        "cwd": "${workspaceFolder}/test",
+        "cwd": "${workspaceFolder}/test/data",
         "environment": [],
         "console": "externalTerminal"
     }
