--- a/decoder/Cargo.toml
+++ b/decoder/Cargo.toml
@@ -14,7 +14,8 @@ integration = [] # Export Rust functions as C-compatible API for integration tes
 [dependencies]
 
 [dev-dependencies]
-criterion = { version = "0.5", features = ["html_reports"] }
+criterion = { version = "0.8", features = ["html_reports"] }
+approx = "0.5"
 
 [build-dependencies]
 bindgen = "0.72"
