--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,16 +4,24 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    {
-        "name": "Decoder",
-        "type": "cppvsdbg",
-        "request": "launch",
-        "program": "${workspaceFolder}/build/xaacdec.exe",
-        "args": ["-ifile:test5_aot42_0.aac", "-imeta:test5_aot42_0.txt", "-ofile:output_test5_02.pcm", "-mp4:1"],
-        "stopAtEntry": false,
-        "cwd": "${workspaceFolder}/test/data",
-        "environment": [],
-        "console": "externalTerminal"
-    }
+        {
+            "name": "(lldb) Decoder",
+            "type": "lldb",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/xaacdec",
+            "args": ["-ifile:test5_aot42_0.aac", "-imeta:test5_aot42_0.txt", "-ofile:output_test5_02.pcm", "-mp4:1"],
+            "cwd": "${workspaceFolder}/test/data",
+        },
+        {
+            "name": "(vsdbg) Decoder",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/xaacdec.exe",
+            "args": ["-ifile:test5_aot42_0.aac", "-imeta:test5_aot42_0.txt", "-ofile:output_test5_02.pcm", "-mp4:1"],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/test/data",
+            "environment": [],
+            "console": "externalTerminal"
+        }
     ]
 }
