--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,9 +45,9 @@ endif()
 include("${XAAC_ROOT}/common/common.cmake")
 include("${XAAC_ROOT}/decoder/libxaacdec.cmake")
 include("${XAAC_ROOT}/test/decoder/xaacdec.cmake")
-include("${XAAC_ROOT}/fuzzer/xaac_dec_fuzzer.cmake")
+#include("${XAAC_ROOT}/fuzzer/xaac_dec_fuzzer.cmake")
 
 include("${XAAC_ROOT}/encoder/libxaacenc.cmake")
 include("${XAAC_ROOT}/test/encoder/xaacenc.cmake")
-include("${XAAC_ROOT}/fuzzer/xaac_enc_fuzzer.cmake")
+#include("${XAAC_ROOT}/fuzzer/xaac_enc_fuzzer.cmake")
 
