--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
     "rust-analyzer.cargo.features": [
+    ],
+    "rust-analyzer.linkedProjects": [
+        "Cargo.toml",
+        "rust/Cargo.toml",
     ]
 }
